[BL-217] Fixed could not create a new Version problem
